Fix tooltips overlapping fixed header.

--- a/IPython/html/static/base/less/page.less
+++ b/IPython/html/static/base/less/page.less
@@ -23,7 +23,7 @@ body {
     background-color: @body-bg;
 
     /* Display over codemirror */
-    z-index: 100;
+    z-index: 1001;
 
     #header-container {
         padding-bottom: 5px;
